--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -10,4 +10,8 @@
         android:id="@+id/_settingsMenuItem"
         android:title="@string/settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/_signOutMenuItem"
+        android:title="@string/sign_out"
+        app:showAsAction="never" />
 </menu>
