--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/_helpMenuItem"
+        android:title="@string/help" />
+    <item
         android:id="@+id/_aboutMenuItem"
         android:title="@string/about"
         app:showAsAction="never"/>
