Added the ability to copy saves between cloud and local save lists. Created the "add" method in SaveCloud to do this.

--- a/app/src/main/res/menu/load_item_popup.xml
+++ b/app/src/main/res/menu/load_item_popup.xml
@@ -12,4 +12,9 @@
         tools:onClick="onClickDelete"
         android:id="@+id/_deletePopUpItem"/>
 
+    <item
+        android:id="@+id/_copyPopUpItem"
+        android:title="@string/copy_to_local"
+        tools:onClick="onClickDelete" />
+
 </menu>
