--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -10,6 +10,6 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:title="@string/pref_title_display_name"
-        android:dialogMessage="You display name will automatically be inserted when you create new topics."/>
+        android:dialogMessage="Your display name will automatically be inserted when you create new topics."/>
 
 </PreferenceScreen>
